workshop05/quickpizza/basic/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: quickpizza
  #TODO: Task 3 - Add annotations for auto instrumentation
  # Golang, exec in /bin/quickpizza
